# celery_redis_1

./: pyproject.toml
app/: app.py  tasks.py
docs/: history.md
